[project]
name = "soundcast-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "geopandas>=1.1.2",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "nbconvert>=7.16.6",
    "numpy==1.26",
    "pandana>=0.7",
    "pandas>=2.3.3",
    "papermill>=2.6.0",
    "plotly>=6.5.1",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "toml>=0.10.2",
    "xlsxwriter>=3.2.9",
]
